--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -164,6 +164,7 @@ input {
 
     touchpad {
         natural_scroll = true #false
+        disable_while_typing = true
     }
 }
 
@@ -280,6 +281,8 @@ bind = $mainMod SHIFT, L, exec, ~/.config/hypr/hyprlock/mylock.sh # hyprlock
 
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+
+#layerrule = animation popin 0%, ^(rofi)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
