--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -43,6 +43,8 @@ $menu = rofi -show drun
 # exec-once = nm-applet &
 exec-once = (pidof hyprpaper && hyprpaper) & (pidof waybar && waybar) & nm-applet --indicator
 
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
+
 # Clipboard manager, added by Alex, should be changed
 #exec-once = clipse -listen
 #windowrulev2 = float, class:(clipse)
@@ -125,6 +127,9 @@ animations {
     animation = workspaces, 1, 6, default
 
     animation = layersIn, 1, 8, default, popin 80%
+
+    #animation = layersMove, 1, 7, myBezier
+    #animation = layers, 0
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -154,7 +159,7 @@ input {
     kb_layout = fr
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = #caps:dupescape
     kb_rules =
 
     follow_mouse = 1
@@ -196,15 +201,23 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod SHIFT, S, exec, hyprshot -m region
+#bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen 
+bind = $mainMod, F, fullscreen
+bind = $mainMod, O, exec, wlogout #~/.config/hypr/hyprlock/mylock.sh # hyprlock
+#bind = $mainMod, O, exec, wlogout #~/.config/hypr/hyprlock/mylock.sh # hyprlock
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
+
+bind = $mainMod SHIFT, left, movewindow, l
+bind = $mainMod SHIFT, right, movewindow, r
+bind = $mainMod SHIFT, up, movewindow, u
+bind = $mainMod SHIFT, down, movewindow, d
 # Move focus with mainMod + vim keys
 # bind = $mainMod, h, movefocus, l
 # bind = $mainMod, l, movefocus, r
@@ -241,8 +254,8 @@ bind = $mainMod SHIFT, ccedilla, movetoworkspace, 9
 bind = $mainMod SHIFT, agrave, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+#bind = $mainMod, S, togglespecialworkspace, magic
+#bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -266,9 +279,6 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
-# Lock
-bind = $mainMod SHIFT, L, exec, ~/.config/hypr/hyprlock/mylock.sh # hyprlock
-
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -279,10 +289,20 @@ bind = $mainMod SHIFT, L, exec, ~/.config/hypr/hyprlock/mylock.sh # hyprlock
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 
+#layerrule = noanim, hyprpicker
+layerrule = noanim, selection # Cancel windows animations that make visual glitches on screenshot
+
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
+# windowrulev2 = float,class:^(kitty)$,title:^(?!bash).$
+#windowrulev2 = float,class:^(kitty)$,title:^(.*-.*)$ # for gns3
+
+# windowrulev2 = float,class:^(nautilus)$,title:^(.*)$ # for gns3
 
 #layerrule = animation popin 0%, ^(rofi)$
+#layerrule = animation windowsMove 0, ^(rofi)$
+
+layerrule = animation fade, ^(swaync-control-center)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
