--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,18 @@
 confirm_os_window_close 0
 
-# font_family JetBrains Mono
-font_family JetBrainsMono Nerd Font Mono
+font_family JetBrains Mono
+# font_family JetBrainsMono Nerd Font Mono
 
 foreground #dddddd
-background #000000
+#background #000000
+#background #331230
+background #181926
 
-background_opacity 0.7
+
+# Gnome titlebar fix
+linux_display_server x11
+
+#background_opacity 0.7
+#background_opacity 0.8
+background_opacity 0.9
+#background_opacity 1
