Add Hyprland configuration files and update flake dependencies

--- a/config/hypr/hyprland/main.conf
+++ b/config/hypr/hyprland/main.conf
@@ -26,12 +26,13 @@ monitor=,preferred,auto, 1
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = kitty --config ~/.config/kitty/kitty_wayland.conf
 $fileManager = nautilus #dolphin
 #$menu = ~/.config/rofi/launchers/launcher.sh type-2 style-5
 $menu = rofi -show drun
 $theme = pink.conf
-$keybinds = keybinds_fr.conf
+#$keybinds = keybinds_fr.conf
+$keybinds = keybinds_us.conf
 
 #################
 ### AUTOSTART ###
@@ -42,7 +43,9 @@ $keybinds = keybinds_fr.conf
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = (pidof hyprpaper && hyprpaper) & (pidof waybar && waybar) & nm-applet --indicator
+# exec-once = (pidof hyprpaper && hyprpaper) & (pidof waybar && waybar) & nm-applet --indicator
+# exec-once = (pidof hyprpaper && hyprpaper) & (pidof quickshell && quickshell)
+exec-once = hyprpaper & quickshell
 
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
@@ -107,10 +110,15 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
+        size = 7
+        passes = 3
+        ignore_opacity = true
 
-        vibrancy = 0.1696
+        noise = 0.08
+        contrast = 1.5
+
+        xray = false
+        new_optimizations = true
     }
 }
 
