fix: new hyrpland config

--- a/config/hypr/hyprland/main.conf
+++ b/config/hypr/hyprland/main.conf
@@ -15,9 +15,14 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto, 1
+monitor = , preferred, auto, auto
 #Epita conf : monitor=,preferred,auto,auto
 
+
+monitor = HDMI-A-2,preferred,auto,1
+monitor = DP-3,preferred,auto,1
+# monitor = DP-3, disable
+# primary_monitor=HDMI-A-2
 
 ###################
 ### MY PROGRAMS ###
@@ -45,15 +50,16 @@ $keybinds = keybinds_us.conf
 # exec-once = nm-applet &
 # exec-once = (pidof hyprpaper && hyprpaper) & (pidof waybar && waybar) & nm-applet --indicator
 # exec-once = (pidof hyprpaper && hyprpaper) & (pidof quickshell && quickshell)
-exec-once = hyprpaper & quickshell
+# exec-once = hyprpaper & quickshell
+exec-once = caelestia-shell
 
 exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 
 # Clipboard manager, added by Alex, should be changed
-#exec-once = clipse -listen
-#windowrulev2 = float, class:(clipse)
-#windowrulev2 = size 622 652, class:(clipse)
-#bind = SUPER, P, exec, kitty --class clipse -e clipse
+exec-once = clipse -listen
+windowrulev2 = float, class:(clipse)
+windowrulev2 = size 622 652, class:(clipse)
+bind = SUPER, P, exec, kitty --class clipse -e clipse
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -74,7 +80,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -92,7 +98,7 @@ general {
 }
 
 # Color scheme
-source = ~/.config/hypr/hyprland/$theme
+source = ~/.config/hypr/hyprland/theme/$theme
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
@@ -118,6 +124,7 @@ decoration {
         contrast = 1.5
 
         xray = false
+        # xray = true
         new_optimizations = true
     }
 }
@@ -175,7 +182,8 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    # sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.4 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = true #false
@@ -184,9 +192,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -232,5 +240,4 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 debug {
     disable_logs = false
 }
-
 
